<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview_view_issue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="horizontal"
        >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.5">

        <TextView
            android:text="@string/label_issue_title"
            style="@style/formLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/label_date"

            style="@style/formLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/label_time"
            style="@style/formLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/label_location"
            style="@style/formLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical" android:layout_weight="0.5"
        >
        <TextView
            android:id="@+id/tv_title"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/tv_date"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/tv_time"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/tv_location"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
        <!-- Image -->
        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/img_issue"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
 />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:text="@string/label_description"

            style="@style/formLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:text="@string/label_urgency"

            style="@style/formLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:text="@string/label_reporter"

            style="@style/formLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:text="@string/label_email"

            style="@style/formLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:text="@string/label_contact"
            style="@style/formLabelStyle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_contact"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:text="@string/label_status"
            style="@style/formLabelStyle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_status"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:text="@string/label_status_comment"
            style="@style/formLabelStyle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_status_comment"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_urgency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_reporter"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <TextView
            android:id="@+id/tv_email"

            android:layout_height="wrap_content"
            android:singleLine="false"
            android:layout_width="match_parent" />
        </LinearLayout>


</LinearLayout>
</ScrollView>